@@ -4,6 +4,7 @@ import com.apeiron.immoxperts.domain.DvfLouer;
 import com.apeiron.immoxperts.repository.DvfLouerRepository;
 import com.apeiron.immoxperts.service.DvfLouerService;
 import com.apeiron.immoxperts.service.dto.DvfLouerDto;
+import com.apeiron.immoxperts.service.dto.SuggestionDto;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -19,36 +20,66 @@ public class DvfLouerServiceImpl implements DvfLouerService {
     }
 
     @Override
-    public List<DvfLouerDto> getAllLouers() {
-        return repository.findAll().stream().map(this::toDto).collect(Collectors.toList());
+    public List<DvfLouerDto> getLouersByLocationAndFilters(String value, String type, BigDecimal maxBudget, String propertyType) {
+        if (value == null || value.trim().isEmpty() || type == null || type.trim().isEmpty()) {
+            return List.of();
+        }
+
+        List<DvfLouer> results = repository.findByLocationAndFilters(
+            value.trim(),
+            type.trim(),
+            maxBudget,
+            propertyType != null ? propertyType.trim() : null
+        );
+        return results.stream().map(this::toDto).collect(Collectors.toList());
     }
 
     @Override
-    public List<DvfLouerDto> getLouersByPostalCode(String postalCode) {
-        return repository.findByPostalCode(postalCode).stream().map(this::toDto).collect(Collectors.toList());
+    public List<DvfLouerDto> getLouersByLocation(String value, String type) {
+        if (value == null || value.trim().isEmpty() || type == null || type.trim().isEmpty()) {
+            return List.of();
+        }
+
+        List<DvfLouer> results = repository.findByLocationAndType(value.trim(), type.trim());
+        return results.stream().map(this::toDto).collect(Collectors.toList());
     }
 
     private DvfLouerDto toDto(DvfLouer entity) {
         DvfLouerDto dto = new DvfLouerDto();
         dto.setId(entity.getId());
-        dto.setPostalCode(entity.getPostalCode());
+        dto.setSource(entity.getSource());
+        dto.setSearchPostalCode(entity.getSearchPostalCode());
+        dto.setDepartment(entity.getDepartment());
+        dto.setDepartmentName(entity.getDepartmentName());
+        dto.setCommune(entity.getCommune());
+        dto.setCodeDepartment(entity.getCodeDepartment());
         dto.setPropertyType(entity.getPropertyType());
+        dto.setPriceText(entity.getPriceText());
+        dto.setPrice(entity.getPrice());
         dto.setAddress(entity.getAddress());
         dto.setDetails(entity.getDetails());
-        dto.setPrice(entity.getPrice());
-        dto.setPriceText(entity.getPriceText());
         dto.setImages(entity.getImages());
-        dto.setScrapedAt(entity.getScrapedAt());
         return dto;
     }
 
     @Override
-    public List<DvfLouerDto> searchLouers(String postalCode, BigDecimal price, String propertyType) {
-        List<DvfLouer> list = repository.searchLouers(
-            (postalCode == null || postalCode.isBlank()) ? null : postalCode,
-            price,
-            propertyType
-        );
-        return list.stream().map(this::toDto).collect(Collectors.toList());
+    public List<SuggestionDto> getSuggestions(String query, int limit) {
+        if (query == null || query.trim().isEmpty()) {
+            return List.of();
+        }
+
+        List<Object[]> results = repository.findSuggestions(query.trim(), limit);
+
+        return results
+            .stream()
+            .map(result ->
+                new SuggestionDto(
+                    (String) result[0], // value (original value)
+                    (String) result[1], // adresse (formatted address)
+                    (String) result[2], // suggestion type
+                    ((Number) result[3]).longValue() // count
+                )
+            )
+            .collect(Collectors.toList());
     }
 }
